Fixed work alignment and optimization for tablet and mobile

--- a/css/base.css
+++ b/css/base.css
@@ -26,11 +26,6 @@ section {
   max-width: none;
 }
 
-img:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-}
-
 section:nth-child(even) {
   background-color: rgb(77,77,77);
   color: white;
@@ -72,9 +67,39 @@ li {
 
 }
 
-img {
-  max-width: 100%;
-  display: inline-block;
+/*.four.columns {
+
+	display: flex;
+	justify-content: center;
+	min-width: 300px;
+	width: 30.6666666667%;
+	display: inline-block;
+}
+
+.eight.columns {
+	min-width: 300px;
+	width: 65.3333333333%;
+	display: inline-block;
+}*/
+
+.work-img {
+  /*width: 100%;
+	height: auto;
+  display: inline-block;*/
+	position: relative;
+  float: left;
+  width:  100%;
+  height: 220px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+  background-position: 0% 0%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+}
+
+.work-img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
 #title {
